--- a/DungeonWorldCJS.cfg
+++ b/DungeonWorldCJS.cfg
@@ -1,19 +1,19 @@
 <SolutionConfig Version="2.3.3.0">
-  <PublishDirectory Value="res" />
+  <PublishDirectory Value="res/" />
   <PackageDirectory Value="package/" />
   <PublishType Value="Reference" />
   <SolutionSize Value="960 * 640" />
   <ResolutionName Value="iPhone 4/4S" />
-  <DefaultSerializer Value="Serializer_FlatBuffers" />
-  <CustomSerializer Value="Serializer_FlatBuffers" />
+  <DefaultSerializer Value="Serializer_Json" />
+  <CustomSerializer Value="Serializer_Json" />
   <IsNameStandardized Value="False" />
   <CustomProperties>
     <Item Key="CCS_CocosPropertis">
       <Value ctype="CocosProperties">
-        <SolutionCodeType Value="Resource" />
-        <ProgramLanguage Value="none" />
-        <CreateFrameworkVersion Value="" />
-        <CurrentFrameworkVersion Value="" />
+        <SolutionCodeType Value="Complete" />
+        <ProgramLanguage Value="js" />
+        <CreateFrameworkVersion Value="cocos2d-x-3.9" />
+        <CurrentFrameworkVersion Value="cocos2d-x-3.9" />
       </Value>
     </Item>
   </CustomProperties>
